# hrm

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: act.rs  attention.rs  dataset.rs  lib.rs  main.rs  model.rs  sparse_embedding.rs  training.rs
