[package]
name = "hrm"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Oleksandr Knyshuk <olk@disr.it>"]

[dependencies]
burn = { git = "https://github.com/tracel-ai/burn.git", rev = "d7aa94f", features = [
    "train",
    "wgpu",
    "fusion",
    "tui",
    "metrics",
] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
